fixed secondary color so there is no contrast issue.

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,6 @@
 :root {
     --color-primary: #1a4278;
-    --color-secondary: #040646;
+    --color-secondary: #08052e;
     --color-background: #989baf;
     --color-text: black;
     --color-text-alt: whitesmoke;
